--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,10 @@ customFiles/
 configs/
 watchedFolders/
 clientWebUI/
-!cucumber/
-!cucumber/exampleFiles/
-!cucumber/exampleFiles/example_html.zip
+!testing/
+!testing/cucumber/
+!testing/cucumber/exampleFiles/
+!testing/cucumber/exampleFiles/example_html.zip
 exampleYmlFiles/stirling/
 
 # Gradle
