--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
   repositories {
-    maven { url 'https://boegl.jfrog.io/artifactory/snapshots-gradle-dev-local/' }
+    maven { url = 'https://boegl.jfrog.io/artifactory/snapshots-gradle-dev-local/' }
   }
   dependencies {
     classpath 'edu.sc.seis.launch4j:launch4j:latest.integration'
