Update build.gradle (#107)
* Update build.gradle

* Update build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
   repositories {
     maven { url = 'https://boegl.jfrog.io/artifactory/snapshots-gradle-dev-local/' }
+    maven { url 'https://jitpack.io' }
   }
   dependencies {
     classpath 'edu.sc.seis.launch4j:launch4j:latest.integration'
@@ -314,7 +315,8 @@ dependencies {
     implementation("io.github.pixee:java-security-toolkit:1.2.1")
 
     // implementation "org.yaml:snakeyaml:2.2"
-    implementation 'com.github.Carleslc.Simple-YAML:Simple-Yaml:1.8.4'
+    // implementation 'com.github.Carleslc.Simple-YAML:Simple-Yaml:1.8.4'
+    implementation 'me.carleslc:Simple-Yaml:1.7.2'
 
     // Exclude Tomcat and include Jetty
     implementation("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
