--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -59,6 +59,15 @@ jobs:
       - name: Run Gradle Command
         run: ./gradlew clean generateLicenseReport
 
+      - name: checkLicense FAILED
+        if: failure()
+        uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
+        with:
+          name: dependencies-without-allowed-license.json
+          path: |
+            build/reports/dependency-license/dependencies-without-allowed-license.json
+          retention-days: 3
+
       - name: Move and Rename License File
         run: |
           mv build/reports/dependency-license/index.json src/main/resources/static/3rdPartyLicenses.json
