--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ repositories {
 
 licenseReport {
     renderers = [new JsonReportRenderer()]
+    allowedLicensesFile = new File("$projectDir/allowed-licenses.json")
 }
 
 sourceSets {
