--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -59,6 +59,9 @@ jobs:
       - name: Run Gradle Command
         run: ./gradlew clean generateLicenseReport
 
+      - name: check License
+        run: ./gradlew clean checkLicense
+
       - name: checkLicense FAILED
         if: failure()
         uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
