--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ plugins {
 }
 
 import com.github.jk1.license.render.*
+import com.github.jk1.license.filter.*
 
 ext {
     springBootVersion = "3.4.2"
@@ -52,8 +53,9 @@ repositories {
 }
 
 licenseReport {
-    renderers = [new JsonReportRenderer()]
+    renderers = [new JsonReportRenderer('index.json', true)]
     allowedLicensesFile = new File("$projectDir/allowed-licenses.json")
+    filters = [new ExcludeTransitiveDependenciesFilter(), new LicenseBundleNormalizer()]
 }
 
 sourceSets {
@@ -314,10 +316,6 @@ dependencies {
     implementation "org.springframework:spring-webmvc:6.2.1"
 
     implementation("io.github.pixee:java-security-toolkit:1.2.1")
-
-    // implementation "org.yaml:snakeyaml:2.2"
-    // implementation 'com.github.Carleslc.Simple-YAML:Simple-Yaml:1.8.4'
-    implementation 'com.github.Carleslc.Simple-YAML:Simple-Yaml:1.8.4'
 
     // Exclude Tomcat and include Jetty
     implementation("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
