--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -95,6 +95,10 @@ jobs:
           build-args: VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
           platforms: linux/amd64,linux/arm64/v8
 
+      - name: Docker-Image-Size Dockerfile
+        run: |
+          docker images ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf --format "Image-Größe vor Push: {{.Size}}"
+
       - name: Generate tags ultra-lite
         id: meta2
         uses: docker/metadata-action@369eb591f429131d6889c46b94e711f089e6ca96 # v5.6.1
@@ -121,6 +125,10 @@ jobs:
           labels: ${{ steps.meta2.outputs.labels }}
           build-args: VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
           platforms: linux/amd64,linux/arm64/v8
+
+      - name: Docker-Image-Size Dockerfile-ultra-lite
+        run: |
+          docker images ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf --format "Image-Größe vor Push: {{.Size}}"
 
       - name: Inspect latest
         run: |
@@ -153,3 +161,7 @@ jobs:
           labels: ${{ steps.meta3.outputs.labels }}
           build-args: VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
           platforms: linux/amd64,linux/arm64/v8
+
+      - name: Docker-Image-Size Dockerfile-ultra-lite
+        run: |
+          docker images ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf --format "Image-Größe vor Push: {{.Size}}"
