--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -97,8 +97,8 @@ jobs:
 
       - name: Inspect latest
         run: |
-          docker pull ${{ steps.repoowner.outputs.lowercase }}/s-pdf:latest --platform=linux/amd64
-          docker image inspect ${{ steps.repoowner.outputs.lowercase }}/s-pdf:latest --platform=linux/amd64 --format "{{.Size}}"
+          docker pull ${{ steps.repoowner.outputs.lowercase }}/s-pdf:latest
+          docker image inspect ${{ steps.repoowner.outputs.lowercase }}/s-pdf:latest --format "{{.Size}}"
 
       - name: Size latest
         run: |
@@ -133,8 +133,8 @@ jobs:
 
       - name: Inspect latest-ultra-lite
         run: |
-          docker pull ${{ steps.repoowner.outputs.lowercase }}/s-pdf:latest-ultra-lite --platform=linux/amd64
-          docker image inspect ${{ steps.repoowner.outputs.lowercase }}/s-pdf:latest-ultra-lite --platform=linux/amd64 --format "{{.Size}}"
+          docker pull ${{ steps.repoowner.outputs.lowercase }}/s-pdf:latest-ultra-lite
+          docker image inspect ${{ steps.repoowner.outputs.lowercase }}/s-pdf:latest-ultra-lite --format "{{.Size}}"
 
       - name: Size latest-ultra-lite
         run: |
@@ -169,8 +169,8 @@ jobs:
 
       - name: Inspect latest-fat
         run: |
-          docker pull ${{ steps.repoowner.outputs.lowercase }}/s-pdf:latest-fat --platform=linux/amd64
-          docker image inspect ${{ steps.repoowner.outputs.lowercase }}/s-pdf:latest-fat --platform=linux/amd64 --format "{{.Size}}"
+          docker pull ${{ steps.repoowner.outputs.lowercase }}/s-pdf:latest-fat
+          docker image inspect ${{ steps.repoowner.outputs.lowercase }}/s-pdf:latest-fat --format "{{.Size}}"
 
       - name: Size latest-fat
         run: |
