--- a/.github/workflows/swagger.yml
+++ b/.github/workflows/swagger.yml
@@ -31,6 +31,7 @@ jobs:
         run: ./gradlew swaggerhubUpload
         env:
           SWAGGERHUB_API_KEY: ${{ secrets.SWAGGERHUB_API_KEY }}
+          SWAGGERHUB_USER: ${{ github.repository_owner }}
 
       - name: Get version number
         id: versionNumber
@@ -41,3 +42,4 @@ jobs:
           curl -X PUT -H "Authorization: ${SWAGGERHUB_API_KEY}" "https://api.swaggerhub.com/apis/Frooodle/Stirling-PDF/${{ steps.versionNumber.outputs.versionNumber }}/settings/lifecycle" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"published\":true,\"default\":true}"
         env:
           SWAGGERHUB_API_KEY: ${{ secrets.SWAGGERHUB_API_KEY }}
+          SWAGGERHUB_USER: ${{ github.repository_owner }}
