--- a/build.gradle
+++ b/build.gradle
@@ -444,9 +444,9 @@ task writeVersion {
 swaggerhubUpload {
     // dependsOn = generateOpenApiDocs  // Depends on your task generating Swagger docs
     api = "Stirling-PDF"  // The name of your API on SwaggerHub
-    owner = "Frooodle"  // Your SwaggerHub username (or organization name)
+    owner = "${System.getenv().getOrDefault('SWAGGERHUB_USER', 'Frooodle')}"  // Your SwaggerHub username (or organization name)
     version = project.version  // The version of your API
-    inputFile = "./SwaggerDoc.json"  // The path to your Swagger docs
+    inputFile = file("SwaggerDoc.json")  // The path to your Swagger docs
     token = "${System.getenv("SWAGGERHUB_API_KEY")}"  // Your SwaggerHub API key, passed as an environment variable
     oas = "3.0.0"  // The version of the OpenAPI Specification you"re using
 }
@@ -473,4 +473,8 @@ task printMacVersion {
     doLast {
         println getMacVersion(project.version.toString())
     }
+}
+
+tasks.named('generateOpenApiDocs') {
+    doNotTrackState("Tracking state is not supported for this task")
 }
