--- a/.github/workflows/swagger.yml
+++ b/.github/workflows/swagger.yml
@@ -31,6 +31,7 @@ jobs:
         run: ./gradlew swaggerhubUpload
         env:
           SWAGGERHUB_API_KEY: ${{ secrets.SWAGGERHUB_API_KEY }}
+          SWAGGERHUB_USER: ${{ github.repository_owner }}
 
       - name: Get version number
         id: versionNumber
