--- a/build.gradle
+++ b/build.gradle
@@ -287,7 +287,8 @@ spotless {
 //        rules=['unused-dependency']
 //    }
 tasks.wrapper {
-    gradleVersion = "8.12"
+    gradleVersion = "8.13"
+    distributionType = Wrapper.DistributionType.ALL
 }
 //tasks.withType(JavaCompile) {
 //    options.compilerArgs << "-Xlint:deprecation"
