--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
     id "java"
     id "org.springframework.boot" version "3.4.2"
     id "io.spring.dependency-management" version "1.1.7"
-    id "org.springdoc.openapi-gradle-plugin" version "1.8.0"
+    id "org.springdoc.openapi-gradle-plugin" version "1.9.0"
     id "io.swagger.swaggerhub" version "1.3.2"
     id "edu.sc.seis.launch4j" version "3.0.6"
     id "com.diffplug.spotless" version "7.0.2"
@@ -113,6 +113,7 @@ openApi {
     apiDocsUrl = "http://localhost:8080/v1/api-docs"
     outputDir = file("$projectDir")
     outputFileName = "SwaggerDoc.json"
+    waitTimeInSeconds = 60 // Increase the wait time to 60 seconds
 }
 
 //0.11.5 to 2024.11.5
