--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ clientWebUI/
 !testing/cucumber/exampleFiles/
 !testing/cucumber/exampleFiles/example_html.zip
 exampleYmlFiles/stirling/
+!libs/*.jar 
 
 # Gradle
 .gradle
