--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,9 @@ buildscript {
   repositories {
     maven { url = 'https://boegl.jfrog.io/artifactory/snapshots-gradle-dev-local/' }
     maven { url = 'https://jitpack.io' }
-        flatDir {
-            dirs "libs"
-        }
+    flatDir {
+        dirs "libs"
+    }
   }
   dependencies {
     classpath 'edu.sc.seis.launch4j:launch4j:latest.integration'
@@ -17,7 +17,7 @@ plugins {
     id "org.springframework.boot" version "3.4.3"
     id "io.spring.dependency-management" version "1.1.7"
     id "org.springdoc.openapi-gradle-plugin" version "1.9.0"
-    id "io.swagger.swaggerhub" version "1.3.2"
+    // id "io.swagger.swaggerhub" version "1.3.2"
     id "edu.sc.seis.launch4j" version "3.0.6"
     id "com.diffplug.spotless" version "7.0.2"
     id "com.github.jk1.dependency-license-report" version "2.9"
