--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ clientWebUI/
 !testing/cucumber/exampleFiles/
 !testing/cucumber/exampleFiles/example_html.zip
 exampleYmlFiles/stirling/
-!libs/*.jar 
+!swaggerhub-V2-2*.jar
 
 # Gradle
 .gradle
