--- a/.github/workflows/swagger.yml
+++ b/.github/workflows/swagger.yml
@@ -31,8 +31,9 @@ jobs:
         with:
           java-version: "17"
           distribution: "temurin"
+          cache: "gradle"
 
-      - uses: gradle/actions/setup-gradle@94baf225fe0a508e581a564467443d0e2379123b # v4.3.0
+      # - uses: gradle/actions/setup-gradle@94baf225fe0a508e581a564467443d0e2379123b # v4.3.0
 
       - name: Generate Swagger documentation
         run: ./gradlew generateOpenApiDocs
