--- a/build.gradle
+++ b/build.gradle
@@ -469,6 +469,7 @@ swaggerhubSetDefaultVersion {
 
 jar {
     enabled = false
+    archiveFileName = "app.jar"
     manifest {
         attributes "Implementation-Title": "Stirling-PDF",
                    "Implementation-Version": project.version
