--- a/.github/workflows/a-self-hosted.yml
+++ b/.github/workflows/a-self-hosted.yml
@@ -14,7 +14,7 @@ jobs:
       - name: 📥 Checkout Repository
         uses: actions/checkout@v4
 
-      - name: 🧱 Gradle Build
+    #   - name: 🧱 Gradle Build
         # run: ./gradlew clean build
 
       - name: 🔍 Check build
