--- a/.github/workflows/a-self-hosted.yml
+++ b/.github/workflows/a-self-hosted.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 🧱 Gradle Build
-        run: ./gradlew clean build
+        run: ./gradlew clean build -x spotlessInternalRegisterDependencies -x spotlessJavaApply -x spotlessApply
         shell: pwsh
         working-directory: ${{ github.workspace }}
 
