--- a/.github/workflows/a-self-hosted.yml
+++ b/.github/workflows/a-self-hosted.yml
@@ -14,10 +14,10 @@ jobs:
       - name: 📥 Checkout Repository
         uses: actions/checkout@v4
 
-    #   - name: 🧱 Gradle Build
-    #     run: ./gradlew clean build
-    #     shell: pwsh
-    #     working-directory: ${{ github.workspace }}
+      - name: 🧱 Gradle Build
+        run: ./gradlew clean build
+        shell: pwsh
+        working-directory: ${{ github.workspace }}
 
       - name: 🔍 Check build
         run: ls build
