--- a/.github/workflows/a-self-hosted.yml
+++ b/.github/workflows/a-self-hosted.yml
@@ -48,20 +48,20 @@ jobs:
       - name: 🚀 Run Stirling-PDF Container
         working-directory: ${{ github.workspace }}
         run: |
-          docker run -d \
-            --name stirling-pdf-pr \
-            -p 7777:8080 \
-            -v /stirling/test/data:/usr/share/tessdata:rw \
-            -v /stirling/test/config:/configs:rw \
-            -v /stirling/test/logs:/logs:rw \
-            -e DOCKER_ENABLE_SECURITY=true \
-            -e SECURITY_ENABLELOGIN=true \
-            -e SYSTEM_DEFAULTLOCALE=en-GB \
-            -e UI_APPNAME="Stirling-PDF PR#manual" \
-            -e UI_HOMEDESCRIPTION="Manual Test Deployment for Stirling-PDF" \
-            -e UI_APPNAMENAVBAR="PR#manual" \
-            -e SYSTEM_MAXFILESIZE=100 \
-            -e METRICS_ENABLED=true \
-            -e SYSTEM_GOOGLEVISIBILITY=false \
-            --restart on-failure:5 \
+          docker run -d `
+            --name stirling-pdf-pr `
+            -p 7777:8080 `
+            -v /stirling/test/data:/usr/share/tessdata:rw `
+            -v /stirling/test/config:/configs:rw `
+            -v /stirling/test/logs:/logs:rw `
+            -e DOCKER_ENABLE_SECURITY=true `
+            -e SECURITY_ENABLELOGIN=true `
+            -e SYSTEM_DEFAULTLOCALE=en-GB `
+            -e UI_APPNAME="Stirling-PDF PR#manual" `
+            -e UI_HOMEDESCRIPTION="Manual Test Deployment for Stirling-PDF" `
+            -e UI_APPNAMENAVBAR="PR#manual" `
+            -e SYSTEM_MAXFILESIZE=100 `
+            -e METRICS_ENABLED=true `
+            -e SYSTEM_GOOGLEVISIBILITY=false `
+            --restart on-failure:5 `
             stirling-pdf-pr:latest
