--- a/.github/workflows/a-self-hosted.yml
+++ b/.github/workflows/a-self-hosted.yml
@@ -1,4 +1,4 @@
-name: A Self-Hosted
+name: A Self-Hosted (Windows & Linux)
 
 on:
   workflow_dispatch:
@@ -13,43 +13,34 @@ on:
           - linux
 
 jobs:
-  build-and-run:
-    runs-on: ${{ github.event.inputs.target_os == 'windows' && 'self-hosted' || 'selfhosted-linux' }}
+  build-windows:
+    if: ${{ github.event.inputs.target_os == 'windows' }}
+    runs-on: self-hosted
 
     steps:
       - name: 📥 Checkout Repository
         uses: actions/checkout@v4
 
       - name: 🧱 Gradle Build
+        shell: pwsh
         run: ./gradlew clean build
-        shell: ${{ github.event.inputs.target_os == 'windows' && 'pwsh' || 'bash' }}
-        working-directory: ${{ github.workspace }}
 
-      - name: 🛠️ Build Stirling-PDF Docker Image
+      - name: 🛠️ Build Docker Image
+        shell: pwsh
         run: docker build -t stirling-pdf-pr:latest .
-        shell: ${{ github.event.inputs.target_os == 'windows' && 'pwsh' || 'bash' }}
-        working-directory: ${{ github.workspace }}
 
-      - name: 🧹 Stop and Remove Container
-        shell: ${{ github.event.inputs.target_os == 'windows' && 'pwsh' || 'bash' }}
+      - name: 🧹 Stop old container (Windows)
+        shell: pwsh
         run: |
-          ${{ github.event.inputs.target_os == 'windows' && '
-          $exists = docker ps -a --format \'{{.Names}}\' | Where-Object { $_ -eq \'stirling-pdf-pr\' }
+          $exists = docker ps -a --format '{{.Names}}' | Where-Object { $_ -eq 'stirling-pdf-pr' }
           if ($exists) {
               docker stop stirling-pdf-pr | Out-Null
               docker rm stirling-pdf-pr | Out-Null
-          } else {
-              Write-Host \"Container stirling-pdf-pr does not exist, nothing to stop/remove.\"
           }
-          ' || '
-          docker stop stirling-pdf-pr || true
-          docker rm stirling-pdf-pr || true
-          ' }}
 
-      - name: 🚀 Run Stirling-PDF Container
-        shell: ${{ github.event.inputs.target_os == 'windows' && 'pwsh' || 'bash' }}
+      - name: 🚀 Run Container (Windows)
+        shell: pwsh
         run: |
-          ${{ github.event.inputs.target_os == 'windows' && '
           docker run -d `
             --name stirling-pdf-pr `
             -p 7777:8080 `
@@ -59,15 +50,40 @@ jobs:
             -e DOCKER_ENABLE_SECURITY=true `
             -e SECURITY_ENABLELOGIN=true `
             -e SYSTEM_DEFAULTLOCALE=en-GB `
-            -e UI_APPNAME=\"Stirling-PDF PR#manual\" `
-            -e UI_HOMEDESCRIPTION=\"Manual Test Deployment for Stirling-PDF\" `
-            -e UI_APPNAMENAVBAR=\"PR#manual\" `
+            -e UI_APPNAME="Stirling-PDF PR#manual" `
+            -e UI_HOMEDESCRIPTION="Manual Test Deployment for Stirling-PDF" `
+            -e UI_APPNAMENAVBAR="PR#manual" `
             -e SYSTEM_MAXFILESIZE=100 `
             -e METRICS_ENABLED=true `
             -e SYSTEM_GOOGLEVISIBILITY=false `
             --restart on-failure:5 `
             stirling-pdf-pr:latest
-          ' || '
+
+  build-linux:
+    if: ${{ github.event.inputs.target_os == 'linux' }}
+    runs-on: selfhosted-linux
+
+    steps:
+      - name: 📥 Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: 🧱 Gradle Build
+        shell: bash
+        run: ./gradlew clean build
+
+      - name: 🛠️ Build Docker Image
+        shell: bash
+        run: docker build -t stirling-pdf-pr:latest .
+
+      - name: 🧹 Stop old container (Linux)
+        shell: bash
+        run: |
+          docker stop stirling-pdf-pr || true
+          docker rm stirling-pdf-pr || true
+
+      - name: 🚀 Run Container (Linux)
+        shell: bash
+        run: |
           docker run -d \
             --name stirling-pdf-pr \
             -p 7777:8080 \
@@ -77,12 +93,11 @@ jobs:
             -e DOCKER_ENABLE_SECURITY=true \
             -e SECURITY_ENABLELOGIN=true \
             -e SYSTEM_DEFAULTLOCALE=en-GB \
-            -e UI_APPNAME=\"Stirling-PDF PR#manual\" \
-            -e UI_HOMEDESCRIPTION=\"Manual Test Deployment for Stirling-PDF\" \
-            -e UI_APPNAMENAVBAR=\"PR#manual\" \
+            -e UI_APPNAME="Stirling-PDF PR#manual" \
+            -e UI_HOMEDESCRIPTION="Manual Test Deployment for Stirling-PDF" \
+            -e UI_APPNAMENAVBAR="PR#manual" \
             -e SYSTEM_MAXFILESIZE=100 \
             -e METRICS_ENABLED=true \
             -e SYSTEM_GOOGLEVISIBILITY=false \
             --restart on-failure:5 \
             stirling-pdf-pr:latest
-          ' }}
